# torus-attention

./: Cargo.toml  LICENSE  README.md  corpus.txt  training_corpus.txt
.github/workflows/: ci.yml
benches/: benchmarks.rs
checkpoints/best/: config.json
checkpoints/final/: config.json
checkpoints/latest/: config.json
examples/: basic_usage.rs  coherence_visualization.rs  collider_demo.rs  gpu_learning_experiment.rs  gpu_test.rs  learning_experiment.rs  quick_agc_test.rs  sensorimotor_demo.rs  stream_analysis.rs  torus_geometry.rs  training_quickstart.rs
logs/run_20260120-001011/: events.out.tfevents.1768893011.WORM.local.66833.0
logs/run_20260120-001548/: events.out.tfevents.1768893348.WORM.local.82556.0
logs/run_20260120-001555/: events.out.tfevents.1768893355.WORM.local.82895.0
logs/run_20260120-001734/: events.out.tfevents.1768893454.WORM.local.1321.0
logs/run_20260120-044227/: events.out.tfevents.1768909347.WORM.local.51298.0
logs/run_20260120-044313/: events.out.tfevents.1768909393.WORM.local.52174.0
logs/run_20260120-052127/: events.out.tfevents.1768911687.WORM.local.75218.0
logs/run_20260120-064637/: events.out.tfevents.1768916797.WORM.local.86901.0
logs/run_20260120-070703/: events.out.tfevents.1768918023.WORM.local.91550.0
logs/run_20260120-092143/: events.out.tfevents.1768926103.WORM.local.30669.0
logs/run_20260120-094909/: events.out.tfevents.1768927749.WORM.local.1381.0
logs/run_20260120-115633/: events.out.tfevents.1768935393.WORM.local.12116.0
logs/run_20260120-115901/: events.out.tfevents.1768935541.WORM.local.12382.0
logs/run_20260120-120026/: events.out.tfevents.1768935626.WORM.local.12574.0
logs/run_20260120-121510/: events.out.tfevents.1768936510.WORM.local.16017.0
logs/run_20260120-151643/: events.out.tfevents.1768947403.WORM.local.1581.0
src/: agi_core.rs  api_server.rs  attention.rs  bidirectional.rs  checkpoint.rs  coherence.rs  compounding.rs  compounding_cohesion.rs  compounding_transformer.rs  consequential.rs  dataset.rs  distillation.rs  dual_loop.rs  dynamic_trainer.rs  error.rs  explicability.rs  general_coherence.rs  geometry.rs  gpu_ops.rs  integration.rs  learning_webs.rs  lib.rs  llm.rs  llm_integration.rs  llm_trainer.rs  main.rs  memory_system.rs  metrics.rs  multi_agent.rs  parallel_streams.rs  periodic.rs  python.rs  real_world.rs  rmsnorm.rs  sensorimotor.rs  tests.rs  tetrahedral_moa.rs  tokenizer.rs  training.rs  vortex.rs
src/backend/: burn_backend.rs  candle_backend.rs  gpu_compute.rs  gpu_parallel.rs  mod.rs
src/collider/: anomaly.rs  conservation.rs  darkness.rs  detector.rs  integration.rs  metrics.rs  mod.rs  particles.rs  vertices.rs
worm-rust/: README.md
worm-rust/docs/: WORM_RUST_DESIGN.md
worm-rust/examples/file_processing/: Cargo.toml
worm-rust/examples/file_processing/src/: main.rs
worm-rust/examples/hello_worm/: Cargo.toml
worm-rust/examples/hello_worm/src/: main.rs
worm-rust/examples/network_blocked/: Cargo.toml
worm-rust/examples/network_blocked/src/: main.rs
worm-rust/worm_std/: Cargo.toml
worm-rust/worm_std/src/: lib.rs  process.rs
