[package]
name = "rustyworm_simplecomplexity"
version = "0.1.0"
edition = "2021"
description = "Torus Topology and Vortex Dynamics Torus Attention Mechanism in Rust"
license = "MIT"
authors = ["rustyWorm"]

[lib]
name = "torus_attention"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "torus_demo"
path = "src/main.rs"

[[bin]]
name = "torus_server"
path = "src/bin/torus_server.rs"

[[bin]]
name = "torus_train"
path = "src/bin/torus_train.rs"

[[bin]]
name = "torus_dynamic_train"
path = "src/bin/torus_dynamic_train.rs"

[dependencies]
# Core ML - Hugging Face's Rust ML framework
candle-core = "0.8"
candle-nn = "0.8"

# NumPy equivalent for Rust
ndarray = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Performance - Data parallelism
rayon = "1.10"
crossbeam = "0.8"
crossbeam-channel = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Additional parallel primitives
parking_lot = "0.12"

# Python interop (hybrid approach)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

# Additional utilities
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# Model checkpointing
safetensors = "0.4"

# Random number generation
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[features]
default = []
python = ["pyo3"]
cuda = ["candle-core/cuda"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
