[package]
name = "rustyworm_simplecomplexity"
version = "0.1.0"
edition = "2021"
description = "Torus Topology and Vortex Dynamics Torus Attention Mechanism in Rust"
license = "MIT"
authors = ["rustyWorm"]

[lib]
name = "torus_attention"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "torus_demo"
path = "src/main.rs"

[[bin]]
name = "torus_server"
path = "src/bin/torus_server.rs"

[[bin]]
name = "torus_train"
path = "src/bin/torus_train.rs"

[[bin]]
name = "torus_dynamic_train"
path = "src/bin/torus_dynamic_train.rs"

[dependencies]
# Core ML - Hugging Face's Rust ML framework (always required)
candle-core = "0.9"
candle-nn = "0.9"

# Burn - Optional GPU accelerator for AMD/Vulkan (use alongside candle)
burn = { version = "0.16", optional = true, default-features = false }
burn-autodiff = { version = "0.16", optional = true }
burn-wgpu = { version = "0.16", optional = true } # Vulkan/WebGPU for AMD GPUs
burn-ndarray = { version = "0.16", optional = true } # CPU backend

# NumPy equivalent for Rust
ndarray = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Performance - Data parallelism
rayon = "1.10"
crossbeam = "0.8"
crossbeam-channel = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Additional parallel primitives
parking_lot = "0.12"

# Python interop (hybrid approach)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

# Additional utilities
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# Model checkpointing
safetensors = "0.4"

# Random number generation
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Tensorboard logging
tensorboard-rs = "0.5"
chrono = "0.4"

[features]
# Default: CPU-only mode (no GPU acceleration)
default = []

# GPU acceleration options
cuda = ["candle-core/cuda"]   # NVIDIA GPU via CUDA
metal = ["candle-core/metal"] # Apple GPU via Metal

# AMD GPU support via Vulkan/WGPU (experimental)
# This enables burn-wgpu which uses Vulkan on AMD GPUs
amd-gpu = ["burn", "burn-autodiff", "burn-wgpu"]

# CPU-only burn backend (for testing)
burn-cpu = ["burn", "burn-autodiff", "burn-ndarray"]

# Python bindings
python = ["pyo3"]

# Usage:
# - CPU only:     cargo build --release
# - NVIDIA CUDA:  cargo build --release --features cuda
# - Apple Metal:  cargo build --release --features metal
# - AMD GPU:      cargo build --release --features amd-gpu

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
