[package]
name = "worm_std"
version = "0.1.0"
edition = "2021"
description = "Security-hardened Rust standard library without network access"
license = "MIT"
authors = ["rustyWorm"]
keywords = ["security", "sandbox", "no-network", "safe"]
categories = ["development-tools", "no-std"]

[dependencies]
thiserror = "1.0"

[features]
default = []
# Allow package managers (cargo, pip, npm) - disabled by default for security
allow_package_managers = []
